--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = { version = "1.0.75", features = ["backtrace"] }
+clap = { version = "4.4.1", features = ["derive"] }
+env_logger = "0.10.0"
+ignore = { version = "0.4.20", features = ["simd-accel"] }
+log = "0.4.20"
+md5 = "0.7.0"
+serde_json = "1.0.105"
+tokio = { version = "1.32.0", features = ["full"] }
+url = "2.4.1"
