--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ digest = "0.10.7"
 env_logger = "0.10.0"
 ignore = { version = "0.4.20", features = ["simd-accel"] }
 log = "0.4.20"
-md-5 = "0.10.5"
+md-5 = { version = "0.10.5", features = ["asm"] }
 num_cpus = "1.16.0"
 serde_json = "1.0.105"
 url = "2.4.1"
