--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ chrono = "0.4"
 clap = { version = "4.4", features = ["derive"] }
 digest = "0.10"
 env_logger = "0.10"
+heapless = { version = "0.8.0", features = ["serde"] }
+human_bytes = {version = "0.4", features = ["fast"]}
 ignore = { version = "0.4", features = ["simd-accel"] }
 log = "0.4"
 md-5 = { version = "0.10", features = ["asm"] }
