--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = { version = "1.0", features = ["backtrace"] }
+anyhow = { version = "1.0.80", features = ["backtrace"] }
 chrono = "0.4"
 clap = { version = "4.4", features = ["derive"] }
+color-backtrace = "0.6.1"
 digest = "0.10"
 env_logger = "0.10"
 heapless = { version = "0.8.0", features = ["serde"] }
-human_bytes = {version = "0.4", features = ["fast"]}
+human_bytes = { version = "0.4", features = ["fast"] }
 ignore = { version = "0.4", features = ["simd-accel"] }
 log = "0.4"
 md-5 = { version = "0.10", features = ["asm"] }
